# AnchorTransfer

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
paper/: citation_urls.tsv  main.tex  references.bib  supplementary.tex
reproduce/: 00_fetch_artifacts.sh  00_setup.sh  01_prepare_data.sh  02_train.sh  02b_train_drugban.sh  03_evaluate.sh  04_build_paper.sh  05_train_bdb.sh  06_evaluate_bdb_cross_dataset.sh  07_eval_moodeng.sh  08_knn_baselines_dtc.sh  09_eval_lcidb.sh  README.md  common.sh  eval_moodeng_reproduce.py  paper_analysis.sh  train_affinity_anchor.sh  train_affinity_multitask_2hop_a100.sh  train_affinity_rank_v2_a100.sh  train_affinity_rank_v2_fullgraph_a100.sh  train_affinity_v2_fullgraph_a100.sh
scripts/: README.md  affinity_eval_utils.py  audit_drug_overlap.py  bootstrap_repro_artifacts.py  build_alphafold_graph.py  build_binding_site_graph.py  build_domain_training_data.py  build_model_organism_graph.py  compare_knn_vs_concise.py  compute_prostt5_gpu.py  domain_deepdta_model.py  eval_650m_quartiles.py  eval_650m_vs_baselines.py  eval_anchor_quality_v2.py  eval_anchor_quality_v3.py  eval_anchor_quartiles.py  eval_anchor_quartiles_vs_baselines.py  eval_auroc_all.py  eval_bdb_davis.py  eval_bdb_homolog50.py  eval_bins.py  eval_comprehensive.py  eval_concise_anchor_only.py  eval_homolog50_all.py  eval_knn_dtc.py  eval_knn_glass.py  eval_knn_novel.py  eval_knn_vs_concise_dtc.py  eval_multiseed_bootstrap.py  eval_ood_subset.py  eval_pdbbind_homolog_filtered.py  eval_per_protein_davis.py  eval_prostt5_davis.py  eval_robust_davis.py  (+30 more)
(+200 files in other folders)
