[project]
name = "anchor-transfer-dta"
version = "1.0.0"
description = "Anchor Transfer Learning for Cross-Dataset Drug-Target Affinity Prediction"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1",
    "pandas>=2.1",
    "numpy>=1.26",
    "scikit-learn>=1.3",
    "fair-esm>=2.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
